force-app/main/default/objects/SC_User_Response__c/SC_User_Response__c.object-meta.xml
<CustomObject>
    <label>SC User Response</label>
    <nameField>
        <displayFormat>SCUR-{0000}</displayFormat>
        <label>SC User Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC User Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>