force-app/main/default/objects/SC_User_Response__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>SC_Item__c</referenceTo>
    <relationshipLabel>SC User Responses</relationshipLabel>
    <relationshipName>SC_User_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>