force-app/main/default/objects/SC_User_Response__c/fields/Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Response_Score__c</fullName>
    <label>Response Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>