force-app/main/default/objects/SC_User_Response__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Quote Rejected - Unable To Contact</fullName>
            </value>
            <value>
                <fullName>Initial Quote Rejected - Follow Up Later</fullName>
            </value>
            <value>
                <fullName>Initial Quote Rejected - Property on Hold</fullName>
            </value>
            <value>
                <fullName>IQ Follow Up - Unable To Contact</fullName>
            </value>
            <value>
                <fullName>IQ Follow Up - Follow Up Later</fullName>
            </value>
            <value>
                <fullName>IQ Follow Up - Property on Hold</fullName>
            </value>
            <value>
                <fullName>Customer Needs More Time</fullName>
            </value>
            <value>
                <fullName>Customer Not Free To Talk</fullName>
            </value>
            <value>
                <fullName>Initial Quote Approved</fullName>
            </value>
            <value>
                <fullName>Initial Quote Rejected</fullName>
            </value>
            <value>
                <fullName>Site Measurement Proposed</fullName>
            </value>
            <value>
                <fullName>Site Measurement Meeting Confirmed</fullName>
            </value>
            <value>
                <fullName>Site Measurement Completed</fullName>
            </value>
            <value>
                <fullName>Site Measurements Uploaded</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Uploaded</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Reviewed by Buddy</fullName>
            </value>
            <value>
                <fullName>Site Measurement Rescheduled</fullName>
            </value>
            <value>
                <fullName>Site Measurement Cancelled</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Sent</fullName>
            </value>
            <value>
                <fullName>Design Presentation Proposed</fullName>
            </value>
            <value>
                <fullName>Design Presentation Confirmed</fullName>
            </value>
            <value>
                <fullName>Design Presentation Completed</fullName>
            </value>
            <value>
                <fullName>Final 3D Design &amp; Quote Sent</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Approved</fullName>
            </value>
            <value>
                <fullName>3D Design &amp; Quote Rejected</fullName>
            </value>
            <value>
                <fullName>Production Drawings Uploaded</fullName>
            </value>
            <value>
                <fullName>Production Drawings &amp; Quote Review Complete</fullName>
            </value>
            <value>
                <fullName>Production Drawings Sent</fullName>
            </value>
            <value>
                <fullName>Project Kick-off Proposed</fullName>
            </value>
            <value>
                <fullName>Project Kick-off Meeting Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>