force-app/main/default/objects/SC_User_Response__c/fields/User_Response__c.field-meta.xml
<CustomField>
    <fullName>User_Response__c</fullName>
    <label>User Response</label>
    <type>TextArea</type>
</CustomField>